k8s/s3fs-fuse-deamonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: s3fs-fuse
  namespace: default
  labels:
    app: s3fs-fuse
spec:
  selector:
    matchLabels:
      app: s3fs-fuse
  template:
    metadata:
      labels:
        app: s3fs-fuse
    spec:
      containers:
      - name: s3fs-fuse
        image: efrecon/s3fs
        volumeMounts:
          - name: devfuse
            mountPath: /dev/fuse
          - name: mntdatas3fs
            mountPath: /var/s3fs:rshared
      volumes:
        - name: devfuse
          hostPath:
            path: /dev/fuse
        - name: mntdatas3fs
          hostPath:
            path: /mnt/s3data
